Fix the weird margin issues, hopefully

--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
     <title>Grace's Photography Website</title>
     <link rel="stylesheet" href="assets/main.css" />
   </head>
-  <body>
-    <main>
-      <div class="hero lg:h-[90vh]">
+  <body class="m-0 overflow-x-hidden p-0">
+    <main class="mx-auto w-full">
+      <div class="hero w-full lg:h-[90vh]">
         <div class="hero-content justify-center">
-          <div
-            class="hero-content flex-col sm:gap-5 lg:flex-row-reverse lg:gap-15"
-          >
+          <div class="hero-content flex-col lg:flex-row-reverse lg:gap-15">
             <img
               src="assets/images/Headshot.jpeg"
               alt="Image of Grace Oster"
@@ -25,7 +23,7 @@
               </h1>
               <p class="py-6">
                 Welcome to my personal photography collage! I'm Grace Oster, and
-                this space showcases my passion for capturing moments though
+                this space showcases my passion for capturing moments through
                 photography. Enjoy exploring my work, and stay tuned as I
                 continue to add more photos!
               </p>
@@ -35,14 +33,15 @@
         </div>
       </div>
       <div
-        class="relative grid w-screen justify-items-center gap-x-5 gap-y-8 p-10 sm:grid-cols-1 lg:grid-cols-3"
+        class="relative grid w-full max-w-screen justify-items-center sm:grid-cols-1 sm:gap-x-0 md:grid-cols-2 md:gap-y-8 md:p-10 lg:grid-cols-3"
       >
-        <div class="card bg-base-200 max-w-108 shadow-sm">
+        <div class="card bg-base-200 w-9/10 shadow-sm">
           <figure>
             <img
               src="assets/images/beach.jpeg"
               alt="Image of Oregon Beach, Oregon, USA"
               loading="lazy"
+              class="w-full object-cover"
             />
           </figure>
           <div class="card-body">
@@ -62,12 +61,13 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-108 shadow-sm">
+        <div class="card bg-base-200 w-9/10 shadow-sm">
           <figure>
             <img
               src="assets/images/blue_pool_forest.jpeg"
               alt="Image of Forest near Blue Pool, Oregon, USA"
               loading="lazy"
+              class="w-full object-cover"
             />
           </figure>
           <div class="card-body">
@@ -88,12 +88,13 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-108 shadow-sm">
+        <div class="card bg-base-200 w-9/10 shadow-sm">
           <figure>
             <img
               src="assets/images/anusarn_market.jpeg"
               alt="Image of Anusarn Market, Chiang Mai, Thailand"
               loading="lazy"
+              class="w-full object-cover"
             />
           </figure>
           <div class="card-body">
@@ -114,12 +115,13 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-108 shadow-sm">
+        <div class="card bg-base-200 w-9/10 shadow-sm">
           <figure>
             <img
               src="assets/images/thai_field.jpeg"
               alt="Image of Rice Fields, Chiang Mai, Thailand"
               loading="lazy"
+              class="w-full object-cover"
             />
           </figure>
           <div class="card-body">
@@ -140,12 +142,13 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-108 shadow-sm">
+        <div class="card bg-base-200 w-9/10 shadow-sm">
           <figure>
             <img
               src="assets/images/thai_food.jpeg"
               alt="Image of Thai Food, Chiang Mai, Thailand"
               loading="lazy"
+              class="w-full object-cover"
             />
           </figure>
           <div class="card-body">
@@ -167,12 +170,13 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-108 shadow-sm">
+        <div class="card bg-base-200 w-9/10 shadow-sm">
           <figure>
             <img
               src="assets/images/tuk_tuk.jpeg"
               alt="Image of Tuk Tuk, Chiang Mai, Thailand"
               loading="lazy"
+              class="w-full object-cover"
             />
           </figure>
           <div class="card-body">
@@ -194,12 +198,13 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-108 shadow-sm">
+        <div class="card bg-base-200 w-9/10 shadow-sm">
           <figure>
             <img
               src="assets/images/thai_shoes.jpeg"
               alt="Image of Children's Shoes, Chiang Mai, Thailand"
               loading="lazy"
+              class="w-full object-cover"
             />
           </figure>
           <div class="card-body">
@@ -220,12 +225,13 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-108 shadow-sm">
+        <div class="card bg-base-200 w-9/10 shadow-sm">
           <figure>
             <img
               src="assets/images/jellyfish.jpeg"
               alt="Image of Jellyfish, Nebraska, USA"
               loading="lazy"
+              class="w-full object-cover"
             />
           </figure>
           <div class="card-body">
@@ -247,12 +253,13 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-108 shadow-sm">
+        <div class="card bg-base-200 w-9/10 shadow-sm">
           <figure>
             <img
               src="assets/images/mercer.jpeg"
               alt="Image of Mercer Lake, Florence, Oregon, USA"
               loading="lazy"
+              class="w-full object-cover"
             />
           </figure>
           <div class="card-body">
@@ -274,12 +281,13 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-216 shadow-sm md:col-span-2">
+        <div class="card bg-base-200 w-9/10 shadow-sm md:col-span-2">
           <figure>
             <img
               src="assets/images/whitworth.jpeg"
               alt="Image of Whitworth University in the snow, Washington, USA"
               loading="lazy"
+              class="w-full object-cover"
             />
           </figure>
           <div class="card-body">
@@ -301,12 +309,13 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-108 shadow-sm">
+        <div class="card bg-base-200 w-9/10 shadow-sm">
           <figure>
             <img
               src="assets/images/cows.jpeg"
               alt="Image of Hawaiian Cows near the coast of Maui, Hawaii, USA"
               loading="lazy"
+              class="w-full object-cover"
             />
           </figure>
           <div class="card-body">
@@ -328,12 +337,13 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-108 shadow-sm">
+        <div class="card bg-base-200 w-9/10 shadow-sm">
           <figure>
             <img
               src="assets/images/northern_lights.jpeg"
               alt="Image of Northern Lights, Washington, USA"
               loading="lazy"
+              class="w-full object-cover"
             />
           </figure>
           <div class="card-body">
@@ -354,12 +364,13 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-108 shadow-sm">
+        <div class="card bg-base-200 w-9/10 shadow-sm">
           <figure>
             <img
               src="assets/images/flowers.jpeg"
               alt="Image of Flowers, Florence, Oregon, USA"
               loading="lazy"
+              class="w-full object-cover"
             />
           </figure>
           <div class="card-body">
@@ -380,12 +391,13 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-108 shadow-sm">
+        <div class="card bg-base-200 w-9/10 shadow-sm">
           <figure>
             <img
               src="assets/images/swimmers.jpeg"
               alt="Image of young competitive swimmers, Eugene, Oregon, USA"
               loading="lazy"
+              class="w-full object-cover"
             />
           </figure>
           <div class="card-body">
@@ -406,12 +418,13 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-216 shadow-sm md:col-span-2">
+        <div class="card bg-base-200 w-9/10 shadow-sm md:col-span-2">
           <figure>
             <img
               src="assets/images/sunrise.jpeg"
               alt="Image of Sunrise on Spencer's Butte, Eugene, Oregon, USA"
               loading="lazy"
+              class="w-full object-cover"
             />
           </figure>
           <div class="card-body">
@@ -434,12 +447,13 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-108 shadow-sm">
+        <div class="card bg-base-200 w-9/10 shadow-sm">
           <figure>
             <img
               src="assets/images/ellie.jpeg"
               alt="Senior photo for high school senior, Portland, Oregon, USA"
               loading="lazy"
+              class="w-full object-cover"
             />
           </figure>
           <div class="card-body">
@@ -460,12 +474,13 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-108 shadow-sm lg:col-start-2">
+        <div class="card bg-base-200 w-9/10 shadow-sm lg:col-start-2">
           <figure>
             <img
               src="assets/images/ruby.jpeg"
               alt="Image of Golden Retriever Ruby, Eugene, Oregon, USA"
               loading="lazy"
+              class="w-full object-cover"
             />
           </figure>
           <div class="card-body">
